# codexctl

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LAUNCH_POSTS.md  LICENSE  README.md  flake.nix  index.html  install.sh  justfile  llms.txt  mkdocs.yml  sitemap.xml
.beads/: interactions.jsonl
.codexctl/loops/: issue-triage.toml
.github/: RELEASE_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml  issue-release-notify.yml  release.yml
.internal/plans/: 2026-07-16-lifecycle-hook-cleanup.md  2026-07-16-sequential-wrapper-approval-detection.md  2026-07-17-codex-lifecycle-hook-status.md  2026-07-17-coding-brain-product-boundary.md  2026-07-20-benign-lifecycle-outcomes.md  2026-07-20-git-default-project-identity.md  2026-07-20-lifecycle-activity-project-label.md  2026-07-22-post-tool-use-outcome-telemetry.md  2026-07-24-antigravity-1-1-5-hook-contract-mitigation.md
AGENT_BUS/: index.html
agent-bus/: index.html
blog/: local-brain-architecture.md  posts.md
configuration/: index.html
contributing/: index.html
crates/codexctl-tui/: Cargo.toml
crates/codexctl-tui/src/: app.rs  brain_app.rs  demo.rs  lib.rs  recorder.rs  session_recorder.rs  terminal_suspend.rs
crates/codexctl-tui/src/ui/: detail.rs  help.rs  mod.rs  peers.rs  skills.rs  status_bar.rs  table.rs
docs/: AGENT_BUS.md  agent-bus.md  configuration.md  contributing.md  hive-storage.md  index-old.html  index.md  llms.txt  quickstart.md  reference.md  relay-and-hive.md  relay-discovery.md  relay.md  terminal-support.md  troubleshooting.md
hive-storage/: index.html
nix/: home-manager.nix
quickstart/: index.html
reference/: index.html
relay/: index.html
relay-and-hive/: index.html
relay-discovery/: index.html
scripts/: record-demos.sh  render-aur-bin-files.sh  render-homebrew-formula.sh
search/: search_index.json
src/: brain_screen.rs  commands.rs  config.rs  doctor.rs  ingest.rs  lib.rs  lifecycle_hook.rs  main.rs  orchestrator.rs
src/brain/: activity.rs  (+27 more)
terminal-support/: index.html
tests/: activity_scale.rs  agent_deck_navigation.rs  brain_tui_smoke.rs  distill_process.rs  headless_activity.rs  hook_activity.rs  integration_tests.rs  lifecycle_hook_cli.rs  public_namespace.rs  removed_surfaces.rs  unit_tests.rs
troubleshooting/: index.html
(+162 files in other folders)
