[package]
name = "codexctl-tui"
version = "0.52.1"
edition = "2024"
rust-version = "1.88"
description = "Terminal UI, dashboard recording, and demo-mode fixtures for codexctl. Splits out of the binary so the TUI can evolve independently of the brain/coord/bus subsystems."
license = "MIT"
repository = "https://github.com/aleadag/codexctl"
keywords = ["codex", "tui", "ratatui"]
categories = ["command-line-utilities"]

[lib]
name = "codexctl_tui"
path = "src/lib.rs"

[features]
# Feature flags propagated from the binary's same-named features. Used to
# gate optional UI state (coord widget panels, relay peers panel, hive
# overlay tabs). The binary turns these on via `codexctl-tui/coord`,
# `codexctl-tui/relay`, `codexctl-tui/hive` in its own [features] block.
coord = []
relay = []
hive = []

[dependencies]
codexctl-core = { path = "../codexctl-core", version = "0.52.1" }
ratatui = "0.29"
crossterm = "0.28"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
