[package]
name = "codexctl-tui"
version = "0.53.0"
edition = "2024"
rust-version = "1.88"
description = "Coding Brain terminal UI for codexctl."
license = "MIT"
repository = "https://github.com/aleadag/codexctl"
keywords = ["codex", "tui", "ratatui"]
categories = ["command-line-utilities"]

[lib]
name = "codexctl_tui"
path = "src/lib.rs"

[dependencies]
codexctl-core = { path = "../codexctl-core", version = "0.53.0" }
ratatui = "0.29"
crossterm = "0.28"
ctrlc = "3"
libc = "0.2"
